<resources>
    <string name="prompt_phone">请输入手机号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_username">请输入用户名</string>
    <string name="app_name">滋滋味美</string>
    <string name="sharedImageView">sharedimageview</string>
    <string name="sharedTextView">sharedtextview</string>
    <string name="login">LOGIN</string>
    <string name="login_success">login success</string>
    <string name="Username">Username</string>
    <string name="Password">密   码</string>
    <string name="forgot_your_password">忘记登录密码 ?</string>
    <string name="go">登 录</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="findpwd">找回密码页面</string>
    <string name="detailedpage">详细界面</string>
    <string name="userlogin">用户登陆</string>
    <string name="todo">TODO</string>
    <string name="touristpage">游客的主页</string>
    <string name="pwdandsecre">创建密码和密保</string>
    <string name="wm_order_confirm_submit">提交订单</string>
    <string name="modifypwd">修改密码</string>
    <string name="modifysecre">修改密保</string>
    <string name="wm_order_confirm_to_pay_4">合计</string>
    <string name="exitlogin">退出当前用户</string>
    <string name="Preferential">已优惠￥</string>
    <string name="Settlement">合计￥</string>
    <string name="viewallorders">查看全部订单</string>
    <string name="myorder">我的订单</string>
    <string name="pendingpayment">待付款</string>
    <string name="Tobeshipped">待发货</string>
    <string name="Tobereceived">待支付</string>
    <string name="Tobeevaluated">待评价</string>
    <string name="Refund">退 款</string>
    <string name="textview">我是一个TextView</string>
    <string name="textname">菜名</string>
    <string name="textmoneys">价格</string>
    <string name="textdolo">￥</string>
    <string name="_2018">2018</string>
    <string name="SubmitOrder">提交订单</string>
</resources>
