<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_Order"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/colorOrder"
        android:elevation="4dp"
        android:minHeight="?android:attr/actionBarSize"
        android:navigationIcon="@mipmap/backs"
        android:theme="@style/Zql_theme_toolbar"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@mipmap/backs"
        app:titleTextColor="@android:color/black">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/SubmitOrder"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_Order"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_Order" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Preferential"
                android:textColor="@color/colorItemViewPageCardText"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Orderpay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amount"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_weight="1"
                android:text="@string/Settlement"
                android:textColor="@color/colorItemViewPageCardText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/txt_order_submit"
                android:layout_width="110.0dip"
                android:layout_height="50.0dip"
                android:layout_gravity="center|right"
                android:background="@drawable/wm_common_btn_solid_square"
                android:enabled="false"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_order_submit_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:text="@string/wm_order_confirm_submit"
                    android:textColor="@color/wm_common_txt_btn_solid"
                    android:textSize="@dimen/wm_common_text_size_large" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>