<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/registpage"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/colorFloatingButton"
        android:elevation="4dp"
        android:minHeight="?android:attr/actionBarSize"
        android:theme="@style/Zql_theme_toolbar"
        app:layout_scrollFlags="scroll|enterAlways"
        app:title="用户登陆"
        app:titleTextColor="@android:color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>
    <FrameLayout
        android:layout_width="320dp"
        android:layout_height="450dp"
        android:layout_centerInParent="true"
        android:paddingTop="70dp">
        <android.support.v7.widget.CardView
            android:id="@+id/cv_add"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#2ea67f"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel">
                        <AutoCompleteTextView
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/prompt_username"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:paddingBottom="8dp"
                            android:singleLine="true"
                            android:textColor="#f0f7f4"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel">
                        <AutoCompleteTextView
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/prompt_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingBottom="8dp"
                            android:singleLine="true"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel">
                        <AutoCompleteTextView
                            android:id="@+id/phonenum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/prompt_phone"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:paddingBottom="8dp"
                            android:singleLine="true"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/bt_go"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/next"
                    android:textColor="#2fa881" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:src="@mipmap/plus_x"
            android:transitionName="loginFab"
            app:fabSize="normal" />
    </FrameLayout>
</RelativeLayout>
